--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,9 +11,16 @@
     body{
         background-image: none;
     }
+
+    .main_info {
+        margin-top: 50px;
+    }
+
+    
+
     .paragraph_icon{
         margin-top: 32px;
-        margin-right: 15px;
+        margin-right: 10px;
         width: 64px;
         height: 64px;
     }
@@ -122,6 +129,7 @@
     #container_main{
         max-width: 100vw;
         margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .paragraph{
@@ -176,7 +184,9 @@
         font-size: 18px;
     }
     
-   
+    .footer_icon{
+        margin-bottom: 28px;
+    }
 
     .footer_description{
         font-size: 18px;
