--- a/css/responsive.css
+++ b/css/responsive.css
@@ -226,8 +226,13 @@
 @media (max-width: 400px) {
     .paragraph_icon{
         margin-top: 28px;
-        margin-right: 15px;
+        margin-right: 10px;
         width: 48px;
         height: 48px;
+    }
+    .main_image{
+        margin-top: 30px;
+        width: 300px;
+        height: 300px;
     }
 }
