--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,8 @@
 @media (max-width: 1250px) {
+    html, body {
+        /* Убирает прокрутку по горизонтале, для мобильной версии */
+        overflow-x: hidden;
+    }
     .container{
         margin: 0 100px 0 100px;
         width: calc(100% - 2*100px);
@@ -10,6 +14,10 @@
 
     body{
         background-image: none;
+    }
+
+    .link {
+        font-size: 20px;
     }
 
     .main_info {
@@ -67,20 +75,25 @@
         bottom: 0;
         left: 0;
         right: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        height: 100vh;
+        height: 100%;
         width: 100vw;
         background-color: #3D8130;
         z-index: 1.5;
+        
     }
+
+    .links_wrapper{
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 200px;
+    }        
 
     .link{
         font-family: Reika;
         font-size: 40px;
         font-weight: 400;
+        margin-bottom: 20px;
     }
 
     #button_link{
@@ -88,13 +101,11 @@
         font-size: 28px;
     }
 
-    #button-link{
-        margin-bottom: 350px;
-    }
+    
 
     .burger{
         visibility: visible;
-        position: absolute;
+        position: fixed;
         width: 28px;
         height: 14px;
         right: 6vw;
@@ -104,20 +115,11 @@
         background-position: center;
     }
 
-    .burger:hover{
-        border: 1px solid #fff;
-        border-radius: 10px;
-    }
-
-    .burger:active{
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
-    }
-
     .open{
         background-image: url('../images/burger_close.svg');
         background-repeat: no-repeat;
         background-position: center;
-        z-index: 2;
+        z-index: 3;
     }
 
     .logo_image{
@@ -140,7 +142,7 @@
 
     .paragraph{
         margin-bottom: 10px;
-        width: 80%;
+        width: 90%;
     }
 
     .main_info{
@@ -206,6 +208,9 @@
 }
 
 @media (max-width: 700px) {
+    .logo {
+        min-width: 300px;
+    }
     .container{
         margin: 0 17px 0 17px;
         width: calc(100% - 2*17px);
@@ -227,6 +232,10 @@
     .step_text{
         text-align: center;
         margin: 0 10px 0 10px;
+    }
+
+    #container_tokenomic{
+        margin-bottom: 20px;
     }
 
     .tokenomic_image{
