--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body{
 /* Верстки шапки */
 
 #head{
-    height: 11vw;
+    height: 9vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -59,22 +59,24 @@ body{
     font-family: Reika;
     font-weight: 500;
     font-size: 40px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 /* Верстка ссылок */
 
 .links{
-    width: 45vw;
+    width: 50vw;
+}
+
+.links_wrapper{
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
 
 .link{
     color: #fff;
-    font-size: 28;
+    font-size: 28px;
     text-decoration: none;
     font-family: Comfortaa;
     font-weight: bold;
@@ -89,7 +91,7 @@ body{
 }
 
 #button_link, #button_link:active{
-    padding: 10px;
+    padding: 7px 30px 7px 30px; 
     border: 1px solid #fff;
     border-radius: 50px;
 }
@@ -109,15 +111,16 @@ body{
 .main_info{
     display: flex;
     flex-direction: row;
-    
+    justify-content: space-between;
 }
 
 .paragraph{
-    width: 656px;
+    width: 600px;
     color: #fff;
     margin-top: 47px;
     height: 212px;
 }
+
 
 
 .main_image{
@@ -131,6 +134,9 @@ body{
     line-height: 1.5;
 }
 
+.icons:last-child{
+    margin-right: 0;
+}
 
 .paragraph_icon{
     margin-top: 40px;
@@ -224,6 +230,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 100px
 }
 
 #tokenomic_title{
