--- a/css/responsive.css
+++ b/css/responsive.css
@@ -105,7 +105,7 @@
 
     .burger{
         visibility: visible;
-        position: fixed;
+        position: absolute;
         width: 28px;
         height: 14px;
         right: 6vw;
@@ -115,7 +115,13 @@
         background-position: center;
     }
 
+    .burger:hover{
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+    }
+
     .open{
+        position: fixed;
         background-image: url('../images/burger_close.svg');
         background-repeat: no-repeat;
         background-position: center;
@@ -168,6 +174,11 @@
     .about_paragraph {
         margin-bottom: 30px;
         font-size: 18px;
+    }
+
+    #how_to_buy_title {
+        margin-top: 60px;
+        margin-bottom: 30px;
     }
 
     .tokenomic_content {
