--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html {
 
 body{
     overflow-x: hidden;
-    background-color: #3D8130;
+    background-color: #4C9541;
     background-image: url("../images/background_image.png");
     background-repeat: no-repeat;
     background-position: left 0 top 200px;
@@ -165,6 +165,7 @@ body{
 }
 
 #about_title {
+    margin-top: 35px;
     margin-bottom: 10px;
 }
 
