--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,7 +14,7 @@
         margin-top: 48px;
     }
 
-    body{
+    #container_main{
         background-image: none;
     }
 
@@ -162,7 +162,7 @@
 
     #container_main{
         max-width: 100vw;
-        margin-top: 20px;
+        padding-top: 20px;
         margin-bottom: 20px;
     }
 
