--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,14 @@
-
+@media (min-width: 2445px) {
+    .main {
+        background-position: 35vw;
+    }
+}
 
 @media (max-width: 1250px) {
     html, body {
         /* Убирает прокрутку по горизонтале, для мобильной версии */
         overflow-x: hidden;
+        background-image: none;
     }
     .container{
         margin: 0 100px 0 100px;
