--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,8 @@ body{
     margin-left: 10px;
     display: flex;
     align-items: center;
-    width: 40%;
+    width: 30%;
+    padding-right: 0;
 }
 
 .logo_image{
